--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -43,7 +43,8 @@
     "faq": "Часто задаваемые вопросы",
     "settings": "Настройки",
     "kanban": "Производство",
-    "help": "Помощь"
+    "help": "Помощь",
+    "chat": "Чат"
   },
   "header": {
     "actions": "Действия заголовка",
@@ -78,7 +79,8 @@
     "language": "Язык",
     "textSize": "Размер текста",
     "chat": "Чат",
-    "notifications": "Уведомления"
+    "notifications": "Уведомления",
+    "density": "Плотность"
   },
   "orders": {
     "status": "Статус",
@@ -92,7 +94,13 @@
       "reweld": "Пересварка",
       "repaint": "Перекраска"
     },
-    "compare": "Сравнить"
+    "compare": "Сравнить",
+    "active_stages": "Активные этапы",
+    "client": "Клиент",
+    "due": "Срок",
+    "materials": "Материалы",
+    "rd_project": "Проект R&D",
+    "title": "Название"
   },
   "print": {
     "due_label": "Срок",
@@ -167,7 +175,9 @@
     },
     "log_details": "Детали",
     "log_recorded_by": "записал {author}",
-    "log_recorded_station": " · {station}"
+    "log_recorded_station": " · {station}",
+    "chat": "Чат",
+    "files": "Файлы"
   },
   "orderPage": {
     "loading": {
@@ -248,19 +258,28 @@
     "text_size_toggle": "Изменить размер текста",
     "text_size_hint": "Нажмите для переключения размеров текста",
     "text_size_options": {
-      "sm": { "label": "Мелкий текст", "abbr": "Мелкий" },
-      "md": { "label": "Обычный текст", "abbr": "Обычный" },
-      "lg": { "label": "Крупный текст", "abbr": "Крупный" },
-      "xl": { "label": "Очень крупный текст", "abbr": "Очень крупный" }
+      "sm": {
+        "label": "Мелкий текст",
+        "abbr": "Мелкий"
+      },
+      "md": {
+        "label": "Обычный текст",
+        "abbr": "Обычный"
+      },
+      "lg": {
+        "label": "Крупный текст",
+        "abbr": "Крупный"
+      },
+      "xl": {
+        "label": "Очень крупный текст",
+        "abbr": "Очень крупный"
+      }
     },
     "help_hints": "Подсказки",
     "show_hints": "Показывать подсказки в интерфейсе"
   },
   "help": {
-    "title": "Справка и документация",
-    "faq": "Часто задаваемые вопросы",
-    "hints_enabled": "Подсказки включены",
-    "hints_disabled": "Подсказки выключены"
+    "title": "Горячие клавиши"
   },
   "faq": {
     "title": "FAQ - Часто задаваемые вопросы",
@@ -365,7 +384,6 @@
     "loading_on": "Вкл.",
     "loading_off": "Выкл.",
     "capacity": "Вместимость",
-    "note": "Заметка",
     "loading_day": "День загрузки",
     "loading_day_with_date": "День загрузки: {date}",
     "meta": "Вместимость {capacity} · Заметка: {note}",
@@ -496,7 +514,8 @@
     }
   },
   "actions": {
-    "cancel": "Отмена"
+    "cancel": "Отмена",
+    "saving": "Сохранение..."
   },
   "chat": {
     "title": "Командный чат",
@@ -522,7 +541,10 @@
         "badge": "Завершено",
         "body": "Этап помечен завершённым"
       }
-    }
+    },
+    "no_messages": "Сообщений пока нет",
+    "order_discussion": "Обсуждение заказа",
+    "type_message": "Введите сообщение..."
   },
   "loading": {
     "assign": "Назначить",
@@ -548,9 +570,6 @@
     "import": "Массовый импорт",
     "scan": "Сканировать штрих-код",
     "labels": "Печать этикеток"
-  },
-  "help": {
-    "title": "Горячие клавиши"
   },
   "users": {
     "current": "Пользователь"
@@ -671,7 +690,23 @@
     "prompt": {
       "add": "Добавить количество:",
       "consume": "Списать количество:"
-    }
+    },
+    "3dprinting": "3D-печать",
+    "basicInfo": "Основная информация",
+    "colorInfo": "Цветовая информация",
+    "stockInfo": "Информация о запасах",
+    "supplierInfo": "Информация о поставщике",
+    "hexColor": "Цвет HEX",
+    "electronics": "Электроника",
+    "catalog": "Каталог материалов",
+    "add_material": "Добавить материал",
+    "low_stock_items": "материалов с малым остатком",
+    "show_all": "Показать всё",
+    "show_alerts": "Только оповещения",
+    "search_materials": "Поиск материалов...",
+    "all_categories": "Все категории",
+    "empty_filter": "Нет позиций по этому фильтру.",
+    "in_stock": "В наличии"
   },
   "notifications": {
     "title": "Уведомления",
@@ -713,13 +748,35 @@
       "telegram": "Telegram (макет)",
       "n8n": "n8n (макет)",
       "openrouter": "OpenRouter (макет)"
+    },
+    "appearance": "Внешний вид",
+    "accessibility": "Доступность",
+    "density": "Плотность",
+    "densityHint": "Настройка расстояния между элементами",
+    "description": "Настройте интерфейс под себя",
+    "interfaceLanguage": "Язык интерфейса",
+    "language": "Язык",
+    "previewText": "Превью: Быстрая бурая лисица перепрыгивает через ленивую собаку.",
+    "security": "Безопасность",
+    "textSize": "Размер текста",
+    "textSizeHint": "Настройка размера текста для удобства чтения",
+    "password": {
+      "confirm": "Подтвердите пароль",
+      "current": "Текущий пароль",
+      "hint": "Оставьте пустым, чтобы сохранить текущий пароль",
+      "new": "Новый пароль",
+      "submit": "Обновить пароль",
+      "title": "Изменить пароль"
     }
   },
   "files": {
     "title": "Файлы",
     "download": "Скачать",
     "error": "Не удаётся загрузить файл. Проверьте путь или загрузите в static/files.",
-    "path_label": "Путь к файлу"
+    "path_label": "Путь к файлу",
+    "drop_or_click": "Перетащите файлы сюда или нажмите для загрузки",
+    "no_files": "Файлы не загружены",
+    "order_files": "Файлы заказа"
   },
   "layout": {
     "notifications": "Уведомления",
@@ -753,7 +810,8 @@
     "title": "Язык"
   },
   "theme": {
-    "title": "Тема"
+    "title": "Тема",
+    "hint": "Выберите предпочитаемую цветовую схему"
   },
   "rd": {
     "flag": "Заказ R&D",
@@ -780,11 +838,11 @@
     "download_cdr": "Скачать CDR"
   },
   "ui": {
-    "density": { 
+    "density": {
       "title": "Плотность",
-      "compact": "Компактно", 
-      "cozy": "Уютно", 
-      "comfortable": "Комфортно" 
+      "compact": "Компактно",
+      "cozy": "Уютно",
+      "comfortable": "Комфортно"
     },
     "quickCreate": "Быстрое создание",
     "notifications": "Уведомления",
@@ -795,7 +853,7 @@
     "new_note": "Новая заметка",
     "export_ics": "Экспорт ICS",
     "print_pack": "Печать пакета",
-    "save": "Сохранить", 
+    "save": "Сохранить",
     "discard": "Отменить"
   }
 }
