--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -43,7 +43,8 @@
     "faq": "FAQ",
     "settings": "Settings",
     "kanban": "Production Board",
-    "help": "Help"
+    "help": "Help",
+    "chat": "Chat"
   },
   "header": {
     "actions": "Header actions",
@@ -78,7 +79,8 @@
     "language": "Language",
     "textSize": "Text size",
     "chat": "Chat",
-    "notifications": "Notifications"
+    "notifications": "Notifications",
+    "density": "Density"
   },
   "orders": {
     "status": "Status",
@@ -192,7 +194,9 @@
     },
     "log_details": "Details",
     "log_recorded_by": "recorded by {author}",
-    "log_recorded_station": " · {station}"
+    "log_recorded_station": " · {station}",
+    "chat": "Chat",
+    "files": "Files"
   },
   "orderPage": {
     "loading": {
@@ -273,19 +277,28 @@
     "text_size_toggle": "Toggle text size",
     "text_size_hint": "Click to cycle through text sizes",
     "text_size_options": {
-      "sm": { "label": "Small text", "abbr": "Small" },
-      "md": { "label": "Default text", "abbr": "Default" },
-      "lg": { "label": "Large text", "abbr": "Large" },
-      "xl": { "label": "Extra large text", "abbr": "Extra large" }
+      "sm": {
+        "label": "Small text",
+        "abbr": "Small"
+      },
+      "md": {
+        "label": "Default text",
+        "abbr": "Default"
+      },
+      "lg": {
+        "label": "Large text",
+        "abbr": "Large"
+      },
+      "xl": {
+        "label": "Extra large text",
+        "abbr": "Extra large"
+      }
     },
     "help_hints": "Help Hints",
     "show_hints": "Show helpful tooltips throughout the interface"
   },
   "help": {
-    "title": "Help & Documentation",
-    "faq": "Frequently Asked Questions",
-    "hints_enabled": "Help hints enabled",
-    "hints_disabled": "Help hints disabled"
+    "title": "Keyboard shortcuts"
   },
   "faq": {
     "title": "FAQ - Frequently Asked Questions",
@@ -390,7 +403,6 @@
     "loading_on": "On",
     "loading_off": "Off",
     "capacity": "Capacity",
-    "note": "Note",
     "loading_day": "Loading day",
     "loading_day_with_date": "Loading day: {date}",
     "meta": "Capacity {capacity} · Note: {note}",
@@ -525,7 +537,8 @@
     }
   },
   "actions": {
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "saving": "Saving..."
   },
   "chat": {
     "title": "Team Chat",
@@ -551,7 +564,10 @@
         "badge": "Completed",
         "body": "Stage marked completed"
       }
-    }
+    },
+    "no_messages": "No messages yet",
+    "order_discussion": "Order Discussion",
+    "type_message": "Type a message..."
   },
   "loading": {
     "assign": "Assign",
@@ -577,9 +593,6 @@
     "import": "Bulk import",
     "scan": "Scan barcode",
     "labels": "Print labels"
-  },
-  "help": {
-    "title": "Keyboard shortcuts"
   },
   "users": {
     "current": "User"
@@ -717,7 +730,14 @@
     "prompt": {
       "add": "Add quantity:",
       "consume": "Consume quantity:"
-    }
+    },
+    "3dprinting": "3D Printing",
+    "basicInfo": "Basic Info",
+    "colorInfo": "Color Info",
+    "stockInfo": "Stock Info",
+    "supplierInfo": "Supplier Info",
+    "hexColor": "HEX Color",
+    "electronics": "Electronics"
   },
   "notifications": {
     "title": "Notifications",
@@ -759,13 +779,35 @@
       "telegram": "Telegram (mock)",
       "n8n": "n8n (mock)",
       "openrouter": "OpenRouter (mock)"
+    },
+    "appearance": "Appearance",
+    "accessibility": "Accessibility",
+    "density": "Density",
+    "densityHint": "Control spacing between elements",
+    "description": "Customize your experience",
+    "interfaceLanguage": "Interface Language",
+    "language": "Language",
+    "previewText": "Preview: The quick brown fox jumps over the lazy dog.",
+    "security": "Security",
+    "textSize": "Text Size",
+    "textSizeHint": "Adjust text size for readability",
+    "password": {
+      "confirm": "Confirm Password",
+      "current": "Current Password",
+      "hint": "Leave blank to keep current password",
+      "new": "New Password",
+      "submit": "Update Password",
+      "title": "Change Password"
     }
   },
   "files": {
     "title": "Files",
     "download": "Download",
     "error": "Cannot load file. Check path or upload to static/files.",
-    "path_label": "File path"
+    "path_label": "File path",
+    "drop_or_click": "Drop files here or click to upload",
+    "no_files": "No files uploaded",
+    "order_files": "Order Files"
   },
   "layout": {
     "notifications": "Notifications",
@@ -799,7 +841,8 @@
     "title": "Language"
   },
   "theme": {
-    "title": "Theme"
+    "title": "Theme",
+    "hint": "Choose your preferred color scheme"
   },
   "rd": {
     "flag": "R&D order",
@@ -826,11 +869,11 @@
     "download_cdr": "Download CDR"
   },
   "ui": {
-    "density": { 
+    "density": {
       "title": "Density",
-      "compact": "Compact", 
-      "cozy": "Cozy", 
-      "comfortable": "Comfortable" 
+      "compact": "Compact",
+      "cozy": "Cozy",
+      "comfortable": "Comfortable"
     },
     "quickCreate": "Quick create",
     "notifications": "Notifications",
@@ -841,7 +884,7 @@
     "new_note": "New note",
     "export_ics": "Export ICS",
     "print_pack": "Print pack",
-    "save": "Save", 
+    "save": "Save",
     "discard": "Discard"
   }
 }
